--- a/feedthousandsofbees.html
+++ b/feedthousandsofbees.html
@@ -85,7 +85,7 @@ body {background-color:#c7cdd3;
        </div>
        <div><p>At Save Bees Grow Heirloom seeds, we did an experiment. We set up a 12' x 12' garden box. We decided
            we wanted to grow seedlings in peat pots, transfer them to four inch pots, and then plant them in the ground for
-           maximum survival rate. Then, we planted ten heirloom seed collard plants, and let them flower. We were surprised to
+           maximum survival rate. Then, we planted ten heirloom seed collard plants and let them flower. We were surprised to
            discover that while the collards were blooming, we fed thousands of bees a week, plus many butterflies and other
            insects.
        </p></div>
@@ -159,7 +159,7 @@ body {background-color:#c7cdd3;
 
               <img src="img/plant3.JPG" class="img-fluid" alt="Responsive image">
               </div>
-              <p><span><i class="fas fa-play"></i></span><a href="photos.html" font color="ffffff">
+              <p><span><i class="fas fa-play"></i></span><a href="photos.html">
                 Gallery</a></p>
               
         </div>
