--- a/feedthousandsofbees.html
+++ b/feedthousandsofbees.html
@@ -104,7 +104,7 @@ body {background-color:#c7cdd3;
                 <li>Top with enough bagged soil to cover about one to two inches (we bought compost).</li>
                 <li>Plant heirloom seeds in the soil.</li>
                 <li>Water according to regional weather.</li>
-                <li>Let the plants grow, and harvest produce as you wish, but let the plants flower, and go to seed.</li>
+                <li>Let the plants grow, and harvest produce as you wish, but let the plants flower and go to seed.</li>
                 </li>
                 <li>When the plants flower, enjoy feeding thousands of bees a week.</li>
         </ol>
