--- a/feedthousandsofbees.html
+++ b/feedthousandsofbees.html
@@ -120,7 +120,7 @@ body {background-color:#c7cdd3;
                 the country's oil consumption by 1.1 M barrels per week."<br>&#8212; Barbara Kingsolver</strong>
             </div>
         <img src="img/plant1.JPG" class="img-fluid" alt="Responsive image">
-        <div><h2>Benefits of the Kitchen Garden</h2></div>
+        <div><h2>Kitchen Garden Benefits</h2></div>
 
        <div><p>The kitchen garden has a pthleora of benefits, not the least of which, 
            if heirloom pollen and nectar is the very best for bees (besides from wildcrafted plants), 
