image_gif border, link color

--- a/about.html
+++ b/about.html
@@ -123,11 +123,11 @@ body {background-color:#c7cdd3;
             </li></ul> Save Bees Grow Heirloom Seeds believes that heirloom pollen and nectar provides bees with the 
             best source of nutrition available.</p></div>
 
-          <div><p>For more information about the Green Revolution, 
+          <div><p class="link">For more information about the Green Revolution, 
             visit the <a href="https://livinghistoryfarm.org/farminginthe50s/crops-3/the-green-revolution/">
-              <font color="#000000">Green Revolution</font></a>.
+              Green Revolution</font></a>.
              </p>
-             <p><i class="fas fa-play"></i></span><A href="hybridheirloom.html">
+             <p class="link"><i class="fas fa-play"></i></span><A href="hybridheirloom.html">
               Hybrid vs. Heirloom Seeds</A></p>
           </div>
       
