--- a/hybridheirloom.html
+++ b/hybridheirloom.html
@@ -124,7 +124,7 @@ body {background-color:#c7cdd3;
         <div class="animated pulse infinite"><strong>"You can't connect the dots looking forward, you can only connect the them looking
           backward"&#8212;Steve Jobs</strong>
         </div>
-        <p><i class="fas fa-play"></i></span><A href="feedthousandsofbees.html">
+        <p class="link"><i class="fas fa-play"></i></span><A href="feedthousandsofbees.html">
           Feed Thousands of Bees</A></p>
     
 </div>
