--- a/hybridheirloom.html
+++ b/hybridheirloom.html
@@ -22,10 +22,7 @@
    
 </head>
 
-<body><style>
-body {background-color:#c7cdd3;
-  }
-</style>
+<body>
       <!-- Navbar start -->
   <nav class="navbar navbar-toggleable-md navbar-inverse bg-inverse">
     <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
