--- a/photos.html
+++ b/photos.html
@@ -42,7 +42,7 @@
                         <a class="nav-link" href="index.html">Introduction<span class="sr-only">(current)</span></a>
                       </li>
                   <li class="nav-item active">
-                    <a class="nav-link" href="about.html">Green Revolution<span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="about.html">Green Revolution</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="hybridheirloom.html">Hybrid vs. Heirloom Seeds</a>
@@ -70,10 +70,7 @@
           <!-- Navbar end -->
 
 <div class="container gallery-container">
-        <style>
-body {background-color:#c7cdd3;
-  }
-</style>
+    
 
     <p class="title"><font color="#c7cdd3">Gallery</p></h1>
 
