--- a/photos.html
+++ b/photos.html
@@ -41,7 +41,7 @@
                     <li class="nav-item active">
                         <a class="nav-link" href="index.html">Introduction<span class="sr-only">(current)</span></a>
                       </li>
-                  <li class="nav-item active">
+                  <li class="nav-item">
                     <a class="nav-link" href="about.html">Green Revolution</a>
                   </li>
                   <li class="nav-item">
