--- a/about.html
+++ b/about.html
@@ -68,7 +68,7 @@
         Most of us have heard the grumblings about how Monsanto, and a handful of other
             seed, pesticide, and fertilizer conglomerates are bad, but the sad reality is that we
             could not provide enough food for the 7.6 billion people on this planet without chemical
-            fertilzer.
+            fertilizer.
         
        </div>
       <div><h2>Hybrid Seeds</h2></div>
