--- a/hybridheirloom.html
+++ b/hybridheirloom.html
@@ -73,7 +73,7 @@
        </div>
        <div><p>Seed control switched from the people to a handful of multi-international corporations. These corporations run 98%
          of world-wide seed sales. Over time, they have patented seeds and lobbied for laws
-         that make it illegal to save seeds. In 2000, GMO seeds took over the commerical world-wide 
+         that make it illegal to save seeds. In 2000, genetically-modified seeds took over the commerical world-wide 
          market.</p> 
        </div>
        <div class="animated pulse infinite"><strong>In the last four years, the chemical industy has spent $1.2 M on a PR initiative
