--- a/hybridheirloom.html
+++ b/hybridheirloom.html
@@ -98,7 +98,7 @@
           79 types of tomatoes, and a mere 16 types of cucumbers. </p>
          
         </div>
-        <div><p>Researchers found 75% heirloom seeds were lost over eight decades. U.S. consumers now have
+        <div><p>Researchers found 75% of heirloom seeds were lost over eight decades. U.S. consumers now have
             less than 1% of the seeds varieties that were available a century ago. Vandana Shiva, Cropecologist, estimates that we shrank from 80,000 species to
           8 species.</p></div>
 
