--- a/feedthousandsofbees.html
+++ b/feedthousandsofbees.html
@@ -121,7 +121,7 @@
         <div><h2>Kitchen Garden Benefits</h2></div>
 
        <div><p>The kitchen garden has a pthleora of benefits, not the least of which, 
-           if heirloom pollen and nectar is the very best for bees (besides from wildcrafted plants), 
+           is heirloom pollen and nectar is the very best for bees (besides from wildcrafted plants), 
            heirloom produce is the very best source of produce
            available for humans. While it's not feasible to completely source your nutritive
         needs from a kitchen garden, you can supplement your diet as much as you can with the 
