--- a/hybridheirloom.html
+++ b/hybridheirloom.html
@@ -76,7 +76,7 @@
          that make it illegal to save seeds. In 2000, genetically-modified seeds took over the commerical world-wide 
          market.</p> 
        </div>
-       <div class="animated pulse infinite"><strong>In the last four years, the chemical industy has spent $1.2 M on a PR initiative
+       <div class="animated pulse infinite" id="quote"><strong>In the last four years, the chemical industy has spent $1.2 M on a PR initiative
          to say it is not their fault, so we know whose fault it is." <br> &#8212; John Cooksey 
         </strong></div>
 
@@ -118,7 +118,7 @@
       
                    
         <a href="http://www.whatsonmyfood.org"><img src="img/What.JPG" class="img-fluid" alt="Find out what's on your food at: whatsonmyfood.org"></a>
-        <div class="animated pulse infinite"><strong>"You can't connect the dots looking forward, you can only connect the them looking
+        <div class="animated pulse infinite" id="quote"><strong>"You can't connect the dots looking forward, you can only connect the them looking
           backward"&#8212;Steve Jobs</strong>
         </div>
         <p class="link"><i class="fas fa-play"></i></span><A href="feedthousandsofbees.html">
