--- a/feedthousandsofbees.html
+++ b/feedthousandsofbees.html
@@ -108,7 +108,7 @@
         </ol>
         <div class="box3"><img src="3.gif"></div><br>
         <div class="box2"><img src="img/box3.JPG" class="img-fluid" alt="Responsive image"></div>
-        <p>You can invest as much time as you want into your kitchen garden. You can find heirloom seed online. 
+        <p>You can invest as much time as you want into your kitchen garden. You can find heirloom seeds online. 
             Some nurseries
             carry them. Heirloom seeds require nuturing to grow, but they 
             do not require vasts amounts of water, fertlizer, or pesticides.
@@ -129,12 +129,12 @@
         
          <div><p>Having a kitchen garden is like a having a private tidepool, or acquarium, 
              in your backyard. You will be amazed at the amount of 
-                  wildlife your garden box supports. Our garden box hosted aphids, 
+                  wildlife your garden box supports. Our garden box hosted 
                   ladybugs,
                   beatles, bees, snakes, and butterflies, to name a few. Standing near your box
                    when it is buzzing with bees, knowing you created that happy and healthy buzzing,
                   is a rewarding sound like no other. Binoculars are recommended kitchen
-                  garden box accessories. Sitting and bee watching
+                  garden box accessories. Sitting and watching bees
                   is fascinating.</p>
                   <p>The benefits of a kitchen garden are innumerable and without measure. Some of the benefits are listed below:</p>
                 <li>Feeding bees, and pollinators, high-quality food.</li>
