--- a/hybridheirloom.html
+++ b/hybridheirloom.html
@@ -102,6 +102,14 @@
             less than 1% of the seeds varieties that were available a century ago. Vandana Shiva, Cropecologist, estimates that we shrank from 80,000 species to
           8 species.</p></div>
 
+        <div><p>We don't know for sure, but it seems like a reasonable conclusion that hybrid
+          pollen is different than heirloom pollen, especially because of the loss of "vigor".
+          Here at Save Bees Grow Heirloom Seeds, we wonder whether decades of hybrid
+          pollen has taken a toll on bee health over generations. Regardless, there is no doubt
+          that heirloom pollen is superior to hybrid pollen. Hybrid pollen is a manufactured
+          man-made type of junk food. Heirloom pollen is unadulterated.
+        </p></div>
+
        <div><h4>Seed Savers</h4></div>
               <div>There is a growing movement to grow heirloom seeds and supply them to gardners for their
                 use, to try to rebuild and perserve biodiversity. The average age of a seed saver is 70 years old. We need
