patch for mobile

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <!--[if lt IE 8]>
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-
+        <div id="superWrapper" class="scrollContainer">
         <div id="intro" class="header-container fs">
             <div class="bcg"><img src="6.JPG" class="img-fluid" alt="Responsive image"></div>
             <header class="wrapper">
@@ -148,6 +148,8 @@
             </footer>
         </div>
     </div>
+</div>
+</div>
 </div>
 </div>
 
