--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <li><a href="#slide01"><span class="nav-dot"></span><span class="nav-label">Lack of Quality Food</span></a></li>
                 <li><a href="#cb02"><span class="nav-dot"></span><span class="nav-label">Bee Extinction</span></a></li>
                 <li><a href="#cb03"><span class="nav-dot"></span><span class="nav-label">You Can Feed Bees</span></a></li>
-                <li><a href="#slide03"><span class="nav-dot"></span><span class="nav-label">Learn More</span></a></li>
+                <li><a href="#cb04"><span class="nav-dot"></span><span class="nav-label">Learn More</span></a></li>
             </ul>
         </nav>
 
@@ -116,7 +116,7 @@
                 </div> <!-- .wrapper -->
             </article>
 
-            <article id="cb03" class="content-block">
+            <article id="cb04" class="content-block">
                     <div class="wrapper">
                             <header class="slideInUp">
                                     <img src="savebees.jpg">
