--- a/hybridheirloom.html
+++ b/hybridheirloom.html
@@ -81,7 +81,7 @@
         </strong></div>
 
       <div><h2>Heirloom Seeds</h2></div>
-           <div>Heirloom seeds have been passed on from generation to generation like family jewels. They are regional.
+           <div>Heirloom seeds get passed on from generation to generation like family jewels. They are regional.
             They grow produce that is tastier than anything you have ever tasted. Heirloom seeds
             grow the same year over year, allowing growers to save their seeds for reuse.
            </div>
