--- a/hybridheirloom.html
+++ b/hybridheirloom.html
@@ -103,7 +103,7 @@
           8 species.</p></div>
 
         <div><p>We don't know for sure, but it seems like a reasonable conclusion that hybrid
-          pollen is different than heirloom pollen, especially because of the loss of "vigor".
+          pollen is different than heirloom pollen, especially because of the loss of vigor.
           Here at Save Bees Grow Heirloom Seeds, we wonder whether decades of hybrid
           pollen has taken a toll on bee health over generations. Regardless, there is no doubt
           that heirloom pollen is superior to hybrid pollen. Hybrid pollen is a manufactured
