--- a/photos.html
+++ b/photos.html
@@ -311,10 +311,9 @@
                 </a>
             </div> 
           
-          
             <div class="col-sm-6 col-md-4">
-                <a class="lightbox" href="img/47.jpg">
-                    <img src="img/47.jpg" alt="">
+                <a class="lightbox" href="img/47.JPG>
+                    <img src="img/47.JPG" alt="">
                 </a>
             </div>
             <div class="col-sm-6 col-md-4">
