--- a/photos.html
+++ b/photos.html
@@ -316,6 +316,12 @@
                     <img src="img/47.JPG" alt="">
                 </a>
             </div>
+
+            <div class="col-sm-6 col-md-4">
+                    <a class="lightbox" href="img/48.jpg>
+                        <img src="img/48.jpg" alt="">
+                    </a>
+                </div>
             <div class="col-sm-6 col-md-4">
                     <a class="lightbox" href="img/plant2.JPG">
                         <img src="img/plant2.JPG" alt="">
