--- a/photos.html
+++ b/photos.html
@@ -312,13 +312,13 @@
             </div> 
           
             <div class="col-sm-6 col-md-4">
-                <a class="lightbox" href="img/47.JPG>
+                <a class="lightbox" href="img/47.JPG">
                     <img src="img/47.JPG" alt="">
                 </a>
             </div>
 
             <div class="col-sm-6 col-md-4">
-                    <a class="lightbox" href="img/48.jpg>
+                    <a class="lightbox" href="img/48.jpg">
                         <img src="img/48.jpg" alt="">
                     </a>
                 </div>
