--- a/photos.html
+++ b/photos.html
@@ -110,10 +110,10 @@
                     <img src="img/5.JPG" alt="">
                 </a>
             </div>
-            <div class="col-sm-12 col-md-8">
+          <!--<div class="col-sm-12 col-md-8">
                     <a class="lightbox" href="img/6.JPG">
                 <img src="img/6.JPG" alt="">
-                </a>
+                </a> duplicate-->
             </div> 
             <div class="col-sm-6 col-md-4">
                 <a class="lightbox" href="img/7.JPG">
